crates/ctx-core/tests/snapshots/golden__golden_get_code_structure.snap
---
source: crates/ctx-core/tests/golden.rs
expression: response
---
{
  "files": [
    {
      "path": "alpha.rs",
      "language": "rust",
      "symbols": [
        {
          "kind": "class",
          "name": "Alpha",
          "line": 1,
          "signature": "pub struct Alpha",
          "members": [
            {
              "name": "value",
              "signature": "pub value: i32"
            }
          ]
        },
        {
          "kind": "class",
          "name": "Mode",
          "line": 5,
          "signature": "pub enum Mode",
          "members": [
            {
              "name": "Fast",
              "signature": "Fast"
            },
            {
              "name": "Slow",
              "signature": "Slow"
            }
          ]
        },
        {
          "kind": "interface",
          "name": "Runnable",
          "line": 10,
          "signature": "pub trait Runnable"
        },
        {
          "kind": "method",
          "name": "new",
          "line": 15,
          "signature": "pub fn new(value: i32) -> Self"
        },
        {
          "kind": "method",
          "name": "run",
          "line": 21,
          "signature": "fn run(&self)"
        },
        {
          "kind": "function",
          "name": "alpha_needle",
          "line": 24,
          "signature": "pub fn alpha_needle() -> &'static str"
        }
      ],
      "token_count": 88
    },
    {
      "path": "delta.js",
      "language": "javascript",
      "symbols": [
        {
          "kind": "function",
          "name": "jsEntry",
          "line": 1,
          "signature": "function jsEntry()"
        },
        {
          "kind": "class",
          "name": "Widget",
          "line": 5,
          "signature": "class Widget"
        },
        {
          "kind": "method",
          "name": "method",
          "line": 6,
          "signature": "method()"
        },
        {
          "kind": "function",
          "name": "runTask",
          "line": 9,
          "signature": "const runTask = async () => 42"
        },
        {
          "kind": "function",
          "name": "exportedArrow",
          "line": 10,
          "signature": "export const exportedArrow = () => \"exported\""
        },
        {
          "kind": "function",
          "name": "makeThing",
          "line": 11,
          "signature": "let makeThing = () => new Widget()"
        },
        {
          "kind": "function",
          "name": "nestedSkip",
          "line": 14,
          "signature": "function nestedSkip()"
        },
        {
          "kind": "class",
          "name": "ExportedThing",
          "line": 17,
          "signature": "class ExportedThing"
        }
      ],
      "token_count": 91
    },
    {
      "path": "gamma.py",
      "language": "python",
      "symbols": [
        {
          "kind": "class",
          "name": "PyAlpha",
          "line": 1,
          "signature": "class PyAlpha"
        },
        {
          "kind": "function",
          "name": "method",
          "line": 2,
          "signature": "def method(self)"
        },
        {
          "kind": "function",
          "name": "py_helper",
          "line": 6,
          "signature": "def py_helper()"
        },
        {
          "kind": "function",
          "name": "async_worker",
          "line": 10,
          "signature": "async def async_worker()"
        },
        {
          "kind": "function",
          "name": "nested_skip",
          "line": 15,
          "signature": "def nested_skip()"
        }
      ],
      "token_count": 49
    },
    {
      "path": "nested/beta.rs",
      "language": "rust",
      "symbols": [
        {
          "kind": "class",
          "name": "BetaCount",
          "line": 1,
          "signature": "pub type BetaCount = usize"
        },
        {
          "kind": "module",
          "name": "inner",
          "line": 7,
          "signature": "mod inner"
        },
        {
          "kind": "macro",
          "name": "beta_macro",
          "line": 9,
          "signature": "macro_rules! beta_macro"
        }
      ],
      "token_count": 36
    },
    {
      "path": "repo_map/js_consumer.js",
      "language": "javascript",
      "symbols": [
        {
          "kind": "function",
          "name": "jsConsumer",
          "line": 1,
          "signature": "function jsConsumer()"
        }
      ],
      "token_count": 16
    },
    {
      "path": "repo_map/py_lib.py",
      "language": "python",
      "symbols": [
        {
          "kind": "function",
          "name": "shared_py_helper",
          "line": 1,
          "signature": "def shared_py_helper()"
        }
      ],
      "token_count": 17
    },
    {
      "path": "repo_map/python_consumer.py",
      "language": "python",
      "symbols": [
        {
          "kind": "function",
          "name": "python_consumer",
          "line": 1,
          "signature": "def python_consumer()"
        }
      ],
      "token_count": 17
    },
    {
      "path": "repo_map/rust_consumer.rs",
      "language": "rust",
      "symbols": [
        {
          "kind": "function",
          "name": "rust_consumer",
          "line": 1,
          "signature": "pub fn rust_consumer() -> usize"
        }
      ],
      "token_count": 22
    },
    {
      "path": "repo_map/rust_lib.rs",
      "language": "rust",
      "symbols": [
        {
          "kind": "function",
          "name": "shared_rust_helper",
          "line": 1,
          "signature": "pub fn shared_rust_helper() -> usize"
        }
      ],
      "token_count": 22
    },
    {
      "path": "repo_map/shared.js",
      "language": "javascript",
      "symbols": [
        {
          "kind": "class",
          "name": "SharedThing",
          "line": 1,
          "signature": "class SharedThing"
        },
        {
          "kind": "function",
          "name": "sharedFactory",
          "line": 7,
          "signature": "function sharedFactory()"
        }
      ],
      "token_count": 23
    }
  ],
  "diagnostics": [],
  "omitted": 2,
  "total_tokens": 381
}
