crates/ctx-core/tests/snapshots/golden__golden_get_file_tree.snap
---
source: crates/ctx-core/tests/golden.rs
expression: value
---
{
  "omitted": 0,
  "roots_count": 1,
  "tree": "<fixture-root>\n├── nested/\n│   ├── beta.rs\n│   └── info.txt\n├── repo_map/\n│   ├── js_consumer.js\n│   ├── py_lib.py\n│   ├── python_consumer.py\n│   ├── rust_consumer.rs\n│   ├── rust_lib.rs\n│   └── shared.js\n├── alpha.rs\n├── delta.js\n├── gamma.py\n└── notes.txt",
  "uses_legend": false,
  "was_truncated": false
}
