crates/ctx-core/tests/snapshots/golden__golden_read_file_summary_view.snap
---
source: crates/ctx-core/tests/golden.rs
expression: "json!({\n    \"summary\": summary, \"fallback\": fallback, \"unsupported\": unsupported,\n})"
---
{
  "fallback": {
    "content": [
      {
        "text": "export function broken( {\n    return 1;\n",
        "type": "text"
      }
    ],
    "structuredContent": {
      "content": "export function broken( {\n    return 1;\n",
      "elided": false,
      "language": null,
      "parsed": false,
      "path": "summary-root/summary_broken.ts",
      "segments": [
        {
          "end_line": 2,
          "kind": "kept",
          "start_line": 1,
          "text": "export function broken( {\n    return 1;\n"
        }
      ],
      "total_lines": 2,
      "view": "summary"
    }
  },
  "summary": {
    "content": [
      {
        "text": "import alpha from 'alpha';\n… elided lines 2-4 …\nimport epsilon from 'epsilon';\n\nexport function greet(name: string): string {\n… elided lines 8-10 …\n}\n\n---\nElided ranges: summary-root/summary_sample.ts:2-4,8-10\nRe-read with read_file start_line/end_line for any range above.\n",
        "type": "text"
      }
    ],
    "structuredContent": {
      "content": "import alpha from 'alpha';\n… elided lines 2-4 …\nimport epsilon from 'epsilon';\n\nexport function greet(name: string): string {\n… elided lines 8-10 …\n}\n\n---\nElided ranges: summary-root/summary_sample.ts:2-4,8-10\nRe-read with read_file start_line/end_line for any range above.\n",
      "elided": true,
      "language": "typescript",
      "parsed": true,
      "path": "summary-root/summary_sample.ts",
      "segments": [
        {
          "end_line": 1,
          "kind": "kept",
          "start_line": 1,
          "text": "import alpha from 'alpha';\n"
        },
        {
          "end_line": 4,
          "kind": "elided",
          "start_line": 2
        },
        {
          "end_line": 7,
          "kind": "kept",
          "start_line": 5,
          "text": "import epsilon from 'epsilon';\n\nexport function greet(name: string): string {\n"
        },
        {
          "end_line": 10,
          "kind": "elided",
          "start_line": 8
        },
        {
          "end_line": 11,
          "kind": "kept",
          "start_line": 11,
          "text": "}\n"
        }
      ],
      "total_lines": 11,
      "view": "summary"
    }
  },
  "unsupported": {
    "content": [
      {
        "text": "plain text\nwith lines\n",
        "type": "text"
      }
    ],
    "structuredContent": {
      "content": "plain text\nwith lines\n",
      "elided": false,
      "language": null,
      "parsed": false,
      "path": "summary-root/summary_notes.txt",
      "segments": [
        {
          "end_line": 2,
          "kind": "kept",
          "start_line": 1,
          "text": "plain text\nwith lines\n"
        }
      ],
      "total_lines": 2,
      "view": "summary"
    }
  }
}
