crates/ctx-core/tests/snapshots/golden__golden_read_file_whole_and_slice.snap
---
source: crates/ctx-core/tests/golden.rs
expression: value
---
{
  "slice": {
    "display_path": "fixtures/notes.txt",
    "first_line": 2,
    "last_line": 2,
    "path": "<absolute-path>",
    "total_lines": 3
  },
  "whole": {
    "display_path": "fixtures/notes.txt",
    "first_line": 1,
    "last_line": 3,
    "path": "<absolute-path>",
    "total_lines": 3
  }
}
